--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/webp" href="/endorse.webp" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Allura&family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Endorse - Digital Signatures</title>
